src/objects/collect__Charge__c.object
<CustomObject>
    <fields>
        <fullName>collect__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Fee</label>
        <referenceTo>collect__Fee__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>collect__Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Total_Due_Amount__c</fullName>
        <label>Total Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Waive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive</label>
        <type>Checkbox</type>
    </fields>
    <label>Charge</label>
    <nameField>
        <displayFormat>CHG-{00000000}</displayFormat>
        <label>Charge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>